--- a/_posts/2023-03-10-65.md
+++ b/_posts/2023-03-10-65.md
@@ -17,8 +17,8 @@ a także Google i Service Weaver for Writing Distributed Applications
 
 Linki i ciekawe znaleziska:
 
-- [Introducing Service Weaver: A Framework for Writing Distributed Applications | Google Open Source Blog (googleblog.com)](https://opensource.googleblog.com/2023/03/introducing-service-weaver-framework-for-writing-distributed-applications.html)
-- [Twitter](https://twitter.com/UdiDahan/status/1631320634843361281?s=20)
+- [Introducing Service Weaver: A Framework for Writing Distributed Applications  ](https://opensource.googleblog.com/2023/03/introducing-service-weaver-framework-for-writing-distributed-applications.html)
+- [Udi Dahan o Service Weaver](https://twitter.com/UdiDahan/status/1631320634843361281?s=20)
 - [Introducing MRSK](https://world.hey.com/dhh/introducing-mrsk-9330a267)
 - [Dapr - Distributed Application Runtime](https://dapr.io/)
 - [How Cloudflare runs Prometheus at scale](https://blog.cloudflare.com/how-cloudflare-runs-prometheus-at-scale/)
@@ -41,7 +41,7 @@ Linki i ciekawe znaleziska:
 
 **Szymon Warda**: Tak.
 
-**Łukasz Kałużny**: Więc jakiś czas temu mówiliśmy o Davidzie Heinemeierze Hanssonie i Heicom. Czyli taka duża usługa mailowa, która się ładnie zaczyna rozbudowywać w jakimśtam światku basecampów i innych rzeczy. I oni powiedzieli, że wychodzą z AWS-a do onpremu, bo jest tani.
+**Łukasz Kałużny**: Więc jakiś czas temu mówiliśmy o Davidzie Heinemeierze Hanssonie i Hey.com. Czyli taka duża usługa mailowa, która się ładnie zaczyna rozbudowywać w jakimśtam światku basecampów i innych rzeczy. I oni powiedzieli, że wychodzą z AWS-a do onpremu, bo jest tani.
 
 **Szymon Warda**: Tak, pamiętamy to dokładnie.
 
@@ -69,103 +69,121 @@ Linki i ciekawe znaleziska:
 
 **Szymon Warda**: No właśnie, to to jest bez sensu trochę dla mnie.
 
-**Łukasz Kałużny**: Za to, czy ten powrót ich z cloudu do onpremu się mógł opłacać? Jeżeli tak większość robili na modłę infrastrukturalną na EC dwójkach, a usługi plastikowe były menago są diabelnie drogie, to ściągnięcie tego na open source nawet na twoich blachach jest tańsze.
+**Łukasz Kałużny**: Za to, czy ten powrót ich z cloudu do onpremu się mógł opłacać? Jeżeli tak większość robili na modłę infrastrukturalną na EC dwójkach, a usługi elasticowe były...
 
-**Szymon Warda**: I jest warte.
+**Szymon Warda**: Tak.
 
-**Łukasz Kałużny**: Tego w szczególności. Polacy tak jak pasów nie korzystali, a wiesz utrzymanie nawet dużych baz danych. Nie oszukujmy się, jeżeli posiadasz potrzeba dużo ludzi żeby utrzymać bazy danych w dobrym stanie.
+**Łukasz Kałużny**: Manage są diabelnie drogie, to ściągnięcie tego na open source na VMki  na twoich blachach jest tańsze.
+
+**Szymon Warda**: Jest. Jak się chowa lasy.
+
+**Łukasz Kałużny**: Tak ,jak pasów nie korzystali, a wiesz utrzymanie nawet dużych baz danych. No nie oszukujmy się, jeżeli posiadasz potrzeba dużo ludzi żeby utrzymać bazę danych w dobrym stanie.
 
 **Szymon Warda**: Zgadza się, jakoś jestem ciekawy to się rozwinie. Wydaje mi się, że będzie powoli, powoli.
 
-**Łukasz Kałużny**: Zobaczysz jak potem albo będą gdzieś wracali.
+**Łukasz Kałużny**: Zobaczymy, będzie potem tak, albo będą gdzieś wracali.
 
-**Szymon Warda**: Tak to się dowiesz.
+**Szymon Warda**: Tak. Coś jeszcze masz?
 
-**Łukasz Kałużny**: Wiesz, to następna rzecz, która jest ciekawa. To w googlu odkrywają lata 90 te, bo tak bym troszeczkę powiedział patrząc się na podejście. Zostało sobie Service Weaver Framework for writing distributed Applications. Czyli jest sobie taki framework do golenia, jak na razie wydany przez Google jako open source, które ma umożliwić pisanie modularne monolitu. I uwaga ta darmowa deploy owanie go jako mikroserwisach rysuje.
+**Łukasz Kałużny**: Wiesz co? Następna rzecz, która jest ciekawa. To w Googlu odkrywają lata 90'te, bo tak bym troszeczkę powiedział patrząc się na podejście. Zostało sobie Service Weaver Framework for Writing Distributed Applications. Czyli jest sobie taki framework do Golanga, jak na razie wydany przez Google jako open source, które ma umożliwić pisanie modularnego monolitu. I uwaga tadam tadam, deployowanie go jako mikroserwisy.
 
-**Szymon Warda**: Nawet ci powiedziałem, że to jest dobry żart, bo jak patrzę co tam jest tak szybko, to też wygląda trochę znajomo do tego co było robione serwisy dla kodu wiele lat temu były takie właśnie opcje, że fabryk zanim było mało coś tam kontenerze dalej tam robić, pisać kod pozycja bitwa pliku. Tak wygląda znajomo bym powiedział raczej od.
+**Szymon Warda**: Wiesz co, nie powiedziałem że to jest z '90tych, bo jak patrzę właśnie na kod, jaki tam jest tak szybko, to też wygląda trochę znajomo do tego co było robione w Service Fabricu dla kodu. Wiele lat temu były takie właśnie opcje, że Service Fabric zanim miał opcje deploymentu tam kontenerów i tak dalej, to można było tam pisać kod C#owy w service fabricu. Wygląda znajomo bym powiedział.
 
-**Łukasz Kałużny**: Tylko tam było takie mocne rozgraniczenie do tego. Tutaj jest tak naprawdę w tym przypadku wszystko ma być ukryte tak naprawdę przed deweloperem. Czyli piszmy odpalają u siebie lokalnie monolit i on nagle automagicznie przez całość, która została tam dodana zacznie się pojawiać i auto skalować na różne mikroserwisach serwisy.
+**Łukasz Kałużny**: Raczej od tej strony tak, tylko tam było takie mocne rozgraniczenie do tego. Tutaj jest tak naprawdę w tym przypadku wszystko ma być ukryte tak naprawdę przed deweloperem. Czyli piszmy, odpalajmy u siebie lokalnie monolit i on nagle automagicznie przez całość, która została tam dodana zacznie się deployować i auto skalować na różne mikroserwisy.
 
-**Szymon Warda**: Plany były tam były tylko odpowiedzi typu w używać, że tam listy były automatycznie rozproszone. Dalej ciekawy kawałek.
+**Szymon Warda**: Ten service fabricowy kod... też plany były, tam była opcja taka, że tylko trzeba było odpowiednich typów używać, że tam listy były automatycznie rozproszone i tak dalej. Ciekawy kawałek.
 
-**Łukasz Kałużny**: Tamten był akurat w tym. Wiesz co, dla mnie to jest troszeczkę właśnie dość fajnie się wypowiedział na ten temat na Twitterze, że trzeba sobie przypomnieć, że właśnie prawidła rozproszonych systemów istnieją.
+**Łukasz Kałużny**: Tamten był akurat w tym. Wiesz co, dla mnie to jest troszeczkę... Właśnie dość fajnie się wypowiedział Woody na ten temat na Twitterze, że trzeba sobie przypomnieć, że właśnie prawidła rozproszonych systemów istnieją.
 
-**Szymon Warda**: Zgadza się, ale uważam mimo wszystko, że to jest dobry kierunek iść, no bo ukrywać te rzeczy, bo to jest taki serwis Mesh 2.0 bym powiedział, że tak ładnie to rozpisze na poziomie kodu. De facto to nie jest proste, ale to jest kierunek, którym zdecydowanie powinniśmy iść.
+**Szymon Warda**: Zgadza się, ale uważam mimo wszystko, że to jest dobry kierunek, w którym należy iść, no bo... Ukrywać właśnie te rzeczy, bo to jest taki Service Mesh 2.0 bym powiedział, że tak ładnie to rozprasza na poziomie kodu. De facto. To nie jest proste, ale to jest kierunek, w którym zdecydowanie powinniśmy iść.
 
-**Łukasz Kałużny**: Wiesz co, jestem ciekaw, raczej kierunek. Zauważ, że tutaj chowasz synchroniczności asynchroniczne i inne rzeczy. No właśnie jest takie, że może inaczej bardzo mocno, chociaż na początku może to będzie. Wiesz jak ktoś takie coś użyje takiego podejście na początku będzie super. Pytanie jak bardzo się rozjedzie w trakcie.
+**Łukasz Kałużny**: Znaczy wiesz co, jestem ciekaw, raczej: kierunek. Zauważ, że tutaj chowasz synchroniczność, asynchroniczność i inne rzeczy. No właśnie jest takie, że może inaczej. Bardzo mocno chowasz - na początku może to będzie. Wiesz. Jak ktoś takie coś użyje, takiego podejścia... Na początku będzie super. Pytanie jak bardzo się rozjedzie w trakcie.
 
-**Szymon Warda**: Pytanie jak bardzo to będzie light abstrakcję na to jest takie ile będzie automat i na ile Cię kopnie w tyłek.
+**Szymon Warda**: Pytanie jak bardzo to będzie leaky abstraction, to jest takie... Ile będzie automagii i na ile w pewnym momencie to Cię kopnie w tyłek. No nie?
 
-**Łukasz Kałużny**: No nie no teraz wygląda na sporo automatyki.
+**Łukasz Kałużny**: No teraz wygląda na sporo automagii.
 
-**Szymon Warda**: Tak więc możemy mocno kopnąć w tyłek dalej. Pewnie to nie jest finalna wersja.
+**Szymon Warda**: Tak więc może mocno kopnąć w tyłek.
 
-**Łukasz Kałużny**: Tak? Bo ta rozpęd.
+**Łukasz Kałużny**: Dokładnie.
 
-**Szymon Warda**: Nie będzie bardzo dużo generalnie w jeszcze innych rzeczach.
+**Szymon Warda**: Pewnie to nie jest finalna wersja.
 
-**Łukasz Kałużny**: Tak więc jest to ciekawe. Myślę patrząc się z takich dziwolągów. Bardziej mi odpowiada model, czyli Distributed Application Runtime.
+**Łukasz Kałużny**: Tak, bo to announcement.
+
+**Szymon Warda**: Podejść będzie bardzo dużo generalnie w weaverze i jeszcze innych rzeczach.
+
+**Łukasz Kałużny**: Tak, więc jest to ciekawe. Wiesz, patrząc się z takich już dziwolągów. Bardziej mi odpowiada model Dapra, czyli Distributed Application Runtime'u.
 
 **Szymon Warda**: Tak, zdecydowanie.
 
-**Łukasz Kałużny**: W szczególności, że też dorobili się paru tych. Może trzeba będzie omówić, bo dorobili się paru nowych ficzerów ciekawych. Dobra dla Ciebie.
+**Łukasz Kałużny**: W szczególności, że też dorobili się paru tych. Może trzeba będzie omówić, bo dorobili się paru nowych ficzerów ciekawych. Dobra, co u Ciebie.
 
-**Szymon Warda**: Ja znowu będzie. Było dawno żeśmy CloudFlare, ale tym razem tym razem, że było ważne i chwalimy go nie za to co wypuścili, ale wypuścili za bloga post na blogu jest to razem zwie się kalkulator, więc pomysł jest. I żeby nie było, nie jest to wpis. On jest długi. W ogóle nie jest to wpis o tym jak klaster odpala swojego Prometeusza. Tak, to spora ilość, to totalnie. To nie jest opowieść o hiper skali. Nie, to jest super fajny wpis o podstawach Prometeusza. Jak działa, jakie są podstawowe założenia, jakie są dobre wzorce zachowania pojedynczych instancji, nawet i przejście przez zrozumienie wszystkiego Prometeuszu, żeby mieć taki. Dobry punkt startowy do tego, żeby później rozumieć jak on działa, żeby później rozumieć co nas kopnie z tyłu i żeby rozumieć de facto jakie ryzyka nam chodzą, skonfigurować go, rozszerzyć itd. Naprawdę dobry wpis nie jest totalnie odsetkach Prometeuszu pracujących i równolegle jest o tym bardziej jak nawet pojedyncze instancje odpalić dobrze. Jak działa? Raczej wprowadzenie.
+**Szymon Warda**: Ja... Znowu będzie. Bo dawno żeśmy CloudFlare'a nie chwalili, ale tym razem, tym razem, żeby było ważne - chwalimy go nie za to co wypuścili, ale wypuścili za... Bloga. Post na blogu jest cloudflare'owym, zwie się How CloudFlare Runs Prometheus At Scale. I żeby nie było, nie jest to wpis. On jest długi. W ogóle. Nie jest to wpis o tym jak cloudflare odpala swoje 900parę Prometeuszy. Tak, to spora ilość. Więc totalnie to nie jest opowieść o hiper skali. Nie, to jest super fajny wpis o podstawach Prometeusza. Jak działa, jakie są podstawowe założenia, jakie są dobre wzorce skalowania pojedynczych instancji, nawet i przejście przez zrozumienie wszystkiego w Prometeuszu, żeby mieć taki... Dobry punkt startowy do tego, żeby później rozumieć jak on działa, żeby później rozumieć co nas kopnie z tyłu i żeby później rozumieć de facto jakie ryzyka nam chodzą, skonfigurować go, rozszerzyć itd. Naprawdę dobry wpis. Nie jest totalnie o setkach Prometeuszy pracujących równolegle. Jest o tym bardziej jak nawet pojedyncze instancje odpalić dobrze. I jak działa. Super wprowadzenie.
 
-**Łukasz Kałużny**: Fajne są właśnie, że w jednym miejscu zgromadzone bebechy, bo pokazują nawet kierunki tych metryk. Fajnie rysunkowo, gdzie zostały zapisane w tym momencie, w czasie, w tym momencie, w czasie. I do tego to służy, więc jest dość fajnie pokazane. Właśnie. Memory mapping Old hands Right Blog study jest, więc to wszystko jest w krokach opisane co cały system robi i fajnie też widać tam na przykładach. Właśnie ten wpis fajnie graficznie oddaje, bo jest pokazanie labeli, czyli od tego jak mamy te metryki oleje celowane do tanków graficznie więc to są w ogóle super, że tak.
+**Łukasz Kałużny**: Fajne są właśnie, że w jednym miejscu zgromadzone bebechy, bo pokazują nawet chunki tych metryk. Fajnie rysunkowo, gdzie zostały zapisane w tym momencie w czasie, w tym momencie w czasie. I do tego to służy, więc jest dość fajnie pokazane. Właśnie. Memory mapping Old chunks, Writing blocks to disk, więc to wszystko jest w krokach opisane co.
 
-**Szymon Warda**: Dużo zrobili dobrze. Tytuł jest totalnie niepasujący do tego co jest w artykule, ale naprawdę jako wprowadzenie do zrozumienia Prometeusza. Super! Nie widziałem niczego tak, żeby w jednym miejscu było tak dobrze zebrane.
+**Szymon Warda**: Cały cykl życia.
 
-**Łukasz Kałużny**: To super.
+**Łukasz Kałużny**: Co pod spodem robi i fajnie też widać tam na przykładach. Właśnie ten wpis fajnie graficznie oddaje, bo jest pokazanie labeli, czyli od tego jak mamy te metryki olabelowane do chunków graficznie więc to są w ogóle super rzeczy.
 
-**Szymon Warda**: A tak tam dwie rzeczy małe rzeczy do dyskusji. Pierwsza Microsoft wprowadza Server Rules do Base SQL owych. To już jest od dawna.
+**Szymon Warda**: Dużo zrobili dobrze. Tytuł jest totalnie niepasujący do tego co jest w artykule, ale naprawdę jako wprowadzenie do zrozumienia Prometeusza. Super! Nie widziałem niczego tak, żeby w jednym miejscu było tak dobrze zebrane. Polecam zdecydowanie.
 
-**Łukasz Kałużny**: Wprowadza tak, bo ona ciągle się pojawiają.
+**Łukasz Kałużny**: Tak, jest to super.
 
-**Szymon Warda**: Ale tym razem dodali to tego tera typu bardziej tego wszystkiego, tego. Czyli mówimy sobie tam 80 100 terabajtów danych i tak dalej. Dalej kilka przemyśleń w kontekście tego oczywiście. Tutaj zobaczyliśmy oczywiście pojęcie server. To chyba jest server lepiej wiesz co tylko że. Ale słusznie.
+**Szymon Warda**: A tak to mam dwie jeszcze rzeczy, małe rzeczy tak, do dyskusji. Pierwsze - Microsoft wprowadza Serverless do baz SQL'owych. To już od dawna jest.
 
-**Łukasz Kałużny**: Tylko pozwól mi jedną rzecz powiedzieć akurat Avis server less pojęcie server lasu i dużo osób zostaje przy klasie z części A ws owej, że bardzo mocno zgwałcił w swoich produktach.
+**Łukasz Kałużny**: Od dawna wprowadza, o tak, bo one ciągle się pojawiają.
 
-**Szymon Warda**: Tak, chodzi mi o to, że nie mam z tym problemu w tej wersji, bo np. na serwerze płacimy za stałe użycie. Jak są większe pliki to też za nie płacimy. To się auto skaluje, więc mamy auto skalowanie bazy składowych, a jak mamy stop kompilator załapać się na tę bazę są wyłączone, że nie ma tam ruchu. Co jest super dobre jeżeli mówimy o takich ogromnych zbiorach danych, bo to jest często odpalamy jakieś raporty rzeczy, które pracują w plikach, więc tak naprawdę to co nam to daje to jest auto skalowanie. Przy czym uwaga bo to jeszcze nie ma zatrzymywania. To dopiero będzie w kolejnej iteracji. Ale podoba mi się fakt, że to zdejmuje strasznie dużo opisów z prawidłowego ustawienia baz relacyjnych i oszczędzania kasy, bo te bazy są z reguły pierwszym albo drugim większym kosztem w jakiejkolwiek usłudze. Jak patrzymy a nagle wchodzimy tego tira. Serwer lasu też jest trochę droższy niż wszystko, ale zdejmujemy ten cały narzut na zatrzymywanie i skalowanie i tak dalej. Więc to bardzo fajny kierunek, w którym usługi podążają.
+**Szymon Warda**: Ale tym razem dodali to tego tiera, może typu bardziej, Hyperscale. Czyli mówimy sobie tam 80 CPU, 100 terabajtów danych i tak dalej i tak dalej. Kilka przemyśleń w kontekście tego oczywiście. Tutaj gwałciliśmy oczywiście pojęcie serverless. Bo to nie jest serverless. Ale słusznie!
+
+**Łukasz Kałużny**: Tylko pozwól mi jedną rzecz powiedzieć. Akurat AWS, serverless, pojęcie serverlessu i dużo osób tutaj przyklaśnie z części AWSowej, że bardzo mocno zgwałcił w swoich produktach.
+
+**Szymon Warda**: Tak, chodzi mi o to generalnie, że nie mam z tym problemu w tej wersji, bo na czym my mamy ten serverless? Płacimy za stałe użycie. Jak są większe pliki to też za nie płacimy. To się auto skaluje, więc mamy auto skalowanie baz SQLowych, a jak mamy stop computed to po jakimś czasie nam te bazy są wyłączane, że nie ma tam ruchu. Co jest super dobre jeżeli mówimy o takich ogromnych zbiorach danych, bo to jest często... Po prostu odpalamy jakieś raporty, te rzeczy, które pracują w peakach, więc tak naprawdę to co nam to daje to jest auto skalowanie. Przy czym uwaga bo ten hyperscale jeszcze nie ma zatrzymywania. To dopiero będzie w kolejnej iteracji. Ale podoba mi się fakt, że to zdejmuje strasznie dużo Opsów z prawidłowego ustawienia baz relacyjnych i oszczędzania kasy, bo te bazy są z reguły pierwszym albo drugim większym kosztem w jakiejkolwiek usłudze. Jak popatrzymy - a nagle jak wchodzimy do tego tiera serverless, który też jest trochę droższy mimo wszystko, ale zdejmujemy ten cały narzut na zatrzymywanie ich, skalowanie i tak dalej. Więc to bardzo fajny kierunek, w którym usługi podążają.
 
 **Szymon Warda**: Według mnie.
 
-**Łukasz Kałużny**: Tak dla dużych rzeczy spoko.
+**Łukasz Kałużny**: Tak, dla dużych rzeczy spoko.
 
-**Szymon Warda**: Dla małych to nie ma sensu.
+**Szymon Warda**: Dla małych to nie ma sensu, nie oszukujmy się.
 
-**Łukasz Kałużny**: Już się tak raczej czujesz. To zawsze jest sen, bo mieliśmy przecież przypadki nawet z naszych konsultacji, gdzie opłacało się ze skalować z ośmiu kolorów do dwóch pod grę w nocy i przynosiło to niezłe oszczędności.
+**Łukasz Kałużny**: Tak. Znaczy wiesz, zawsze jest sens, bo mieliśmy przecież przypadki nawet z naszych, Szymon, konsultacji, gdzie opłacało się zeskalowywać z ośmiu core'ów do dwóch Postgresy w nocy i przynosiło to niezłe oszczędności.
 
-**Szymon Warda**: Zgadzam się tylko jak mówimy, że ma zaoszczędzić jak najbardziej. Tylko teraz pytanie ile zaoszczędzisz per godzina pracy? To jak masz 80 zł, a będzie to zauważalna różnica powiedzmy sobie no nie.
+**Szymon Warda**: Zgadzam się tylko właśnie jak mówimy, znaczy, ma zaoszczędzisz jak najbardziej. Tylko teraz pytanie ile zaoszczędzisz per godzina pracy? To jak masz 80 CPU, to będzie to zauważalna różnica powiedzmy sobie, no nie.
 
-**Łukasz Kałużny**: Jest już zauważalna.
+**Łukasz Kałużny**: Tak, to jest już zauważalna.
 
-**Szymon Warda**: Tak więc to mnie naprawdę cieszy. A druga opcja. Google wprowadziło nowe umowy dla klientów. Nazywa się to Flex. Chodzi głównie o to, że tak naprawdę jest trochę łatwiej klientom wejść w lepsze usługi. Nie musi być. Nie musząc podpisywać takich long term agreement, długich umów na przyszłość, wieloletnich itd. Obniżyli próg wejścia i to sobie sprawdziło, bo jestem mega ciekaw, bo przez ostatnich paru odcinków mówiliśmy o tym, że właściwie ten cały Cloud chmura dorosła i tam już się niewiele dzieje na. Czy jeszcze możliwe jest przetasowania na tym rynku? Zmiana kolejności?
+**Szymon Warda**: Tak więc to mnie naprawdę cieszy. A druga opcja. Google wprowadziło nowe umowy dla klientów. Nazywa się to Flex. Chodzi głównie o to, że tak naprawdę jest trochę łatwiej klientom wejść w lepsze usługi. Nie musi być... Nie muszą nas obowiązywać takie long term agreements, długich umów na przyszłość, wieloletnich itd. Obniżyli próg wejścia i to, co mnie zastanowiło, bo jestem mega ciekaw, bo przez ostatnich paru odcinków mówiliśmy o tym, że właściwie ten cały Cloud, chmura, dorosła i tam już się niewiele dzieje. I to mnie zastanawia - czy jeszcze możliwe jest przetasowanie na tym rynku? Zmiana kolejności?
 
-**Łukasz Kałużny**: Wiesz, to.
+**Łukasz Kałużny**: Wiesz co, dobra.
 
-**Szymon Warda**: Że nie do końca.
+**Szymon Warda**: Wydaje mi się, że nie do końca.
 
-**Łukasz Kałużny**: Patrząc się na te rzeczy to jest po prostu model umów w Google u, chyba z dużych dostawców najbardziej do tej pory, tak, to tam, patrząc się na osób z takiej mojej perspektywy i zabawy, jak mówimy o całych przetasowania innych rzeczach, nie wierzę, że one się przy tej skali, że się zadzieje raczej. Jeżeli już, to prędzej dojdzie do zbalansowania. Raczej nie nazwałbym przetasowanie, ale balansem, czyli że może w googlu przychody urosną, fabuła się bardziej zapadną i wszyscy się zatrzymają na podobnym poziomie po prostu posiadania rynku tych dużych.
+**Łukasz Kałużny**: Patrząc się na te rzeczy to jest po prostu model umów w Google'u, chyba z dużych dostawców najbardziej ssał do tej pory.
 
-**Szymon Warda**: Tak, wydaje mi się, że to dużo nie zmieni za bardzo. Jak? To jest bardziej ewidentnie odpowiedź Google'a na wymagania rynkowe i wymagania sprzedaży, na większy próg wejścia, bo to jest głównie do korporacji, bo tam sprawdzenie planu Enterprise, Enterprise Plus itd. To dalej więc o tym mówimy, ale już tam bez dużych ruchów nie będzie wybuchów, zmian i tak dalej.
+**Szymon Warda**: Tak.
 
-**Łukasz Kałużny**: Nie słuchaj, wiesz, jak sobie popatrzymy na te Multi Cloud dla aplikacji w większości przypadków jest mitem. Jak sobie popatrzę.
+**Łukasz Kałużny**: To tam, patrząc się na osób z takiej mojej perspektywy i teraz - zabawy, jak mówimy o całych przetasowaniach innych rzeczach, nie wierzę, że one się przy tej skali, że się zadzieją. Raczej - jeżeli już, to prędzej dojdzie do zbalansowania. Raczej nie nazwałbym przetasowaniem, ale rebalancing, czyli że może w Googlu przychody urosną, w AWS-ie bardziej spadną i wszyscy się zatrzymają na podobnym poziomie po prostu posiadania trocinków z rynku, tych dużych.
 
-**Szymon Warda**: Nie jest mi tam. Jest zbyt.
+**Szymon Warda**: Tak, wydaje mi się, że tam się już dużo nie zmieni za bardzo. Tak naprawdę. To jest bardziej ewidentnie odpowiedź Google'a na wymagania rynkowe, na bardziej wymagania sprzedaży, na większy próg wejścia, bo to jest głównie dla korporacji, bo tam jest wprowadzenie planu Enterprise, Enterprise Plus itd. Więc o tym mówimy, ale już tam dużych ruchów nie będzie, jakichś wybuchów, zmian i tak dalej.
 
-**Łukasz Kałużny**: Drogi. Dlaczego? Dlatego mówię, że z tej perspektywy jest mitem. Ja to oceniam, jako że dla większości przypadków jest mitem i niepotrzebne. Tak jak zmiana chmury. To tak jak zmienimy bazę, zmienimy bazę relacyjną, tak będziemy zazwyczaj przepisujemy. Jak zaczynam analizować, to kończy się ze zmianą produktu albo przypisaniem. Każdy ma jakieś preferencje, każdy ma jakieś wady i zalety. Jak potem bierzesz większość przypadków jakichś architektur zabawek i Tak, plusy i minusy z każdej chmury i usług, które tam są, one się balansują. Dochodzą, wyrównują, wyrównują się. Nie ma takiego Super, że pójdź tam, zrób to, pójdź tam, zrób to, pójdź tam, zrób, spojrzyj. Patrzysz się holistycznie na wszystkie usługi, bo w poszczególnych przypadkach tak znajdziesz przypadki, że w danym kraju usług jest bardzo lepsze, ale to już któryś taki szary petent, które lepiej skupić się na jednym klubie i przełknąć, że jakaś pierdoła tam gdzieś jest lepiej zrobiona i zrobić sobie porządnie to w jednym miejscu.
+**Łukasz Kałużny**: Nie, słuchaj, wiesz, jak sobie popatrzymy na ten cloud. Multi Cloud dla aplikacji w większości przypadków jest mitem. Jak sobie popatrzysz.
 
-**Szymon Warda**: Tak albo wymagania. Jeżeli chodzi o regulatorów to jest drugi element, gdzie może być tak samo.
+**Szymon Warda**: Nie, nie jest mitem. Jest zbyt drogim przedsięwzięciem.
+
+**Łukasz Kałużny**: Dlatego mówię, że z tej perspektywy jest mitem. Ja to oceniam, jako że dla większości przypadków jest mitem i niepotrzebnym... To tak, jak zmiana chmury. To tak jak zmienimy bazę, zmienimy bazę relacyjną, tak będziemy... Zazwyczaj przepisujemy. Jak zaczynam analizować, to kończy się zazwyczaj zmianą produktu albo przepisaniem. Każdy ma jakieś preferencje, każdy ma jakieś wady i zalety. Jak potem bierzesz większość przypadków jakichś architektur, zabawek i tak - plusy i minusy z każdej z chmur i usług, które tam są, one się balansują. Dochodzą, wyrównują, wyrównują się. Nie ma takiego super, że pójdź tam, zrób to, pójdź tam, zrób to, pójdź tam, zrób, zrób to. Jeżeli patrzysz się holistycznie na wszystkie usługi, bo w poszczególnych przypadkach tak znajdziesz przypadki, że w danym cloudzie usług jest bardzo lepsze, ale to jest już taki cherrypicking, który... Lepiej skupić się na jednym cloudzie i przełknąć, że jakaś pierdoła tam gdzieś jest lepiej zrobiona i zrobić sobie porządnie to w jednym miejscu.
+
+**Szymon Warda**: Tak albo wymagania... Jeżeli chodzi o regulatorów to jest drugi element, gdzie może być twarde - tak.
 
 **Łukasz Kałużny**: Są chmury prostsze i trudniejsze do zrobienia tego.
 
-**Szymon Warda**: Tak, dokładnie. Może bardziej przygotowane i przygotowane?
+**Szymon Warda**: Tak, dokładnie. Może inaczej, bardziej przygotowane, ogólnie przygotowane?
 
-**Łukasz Kałużny**: Hahahaha lepsze określenie. Dobrze.
+**Łukasz Kałużny**: Hahaha, o tak, to lepsze określenie.
 
-**Szymon Warda**: To ja tyle kont wybiegasz.
+**Szymon Warda**: Dobrze. To ja, tyle. Kończymy na razie.
 
-**Łukasz Kałużny**: Trzymajcie się na razie.
+**Łukasz Kałużny**: Trzymajcie się, na razie.
+
+**Szymon Warda**: Hej.
 
