--- a/_posts/2023-03-10-65.md
+++ b/_posts/2023-03-10-65.md
@@ -4,7 +4,7 @@ title: '#65 Patoarchitekci Short #21'
 date: 2023-03-10 08:00:00 +0200
 description: 
 episode: "65"
-tags: ["maersk","heycom","autoskalowanie","serviceweaver"]
+tags: ["mrsk","autoskalowanie","serviceweaver"]
 spreaker: 53147028
 ---
 Jak zwykle dzieje się dużo:
