--- a/_posts/2023-03-17-66.md
+++ b/_posts/2023-03-17-66.md
@@ -7,6 +7,8 @@ episode: "66"
 tags: []
 spreaker: 53222762
 ---
+Mamy dla Was nowe znaleziska! 
+Discord, Cassandra, Scylla, Spotify i nie tylko!
 
 
 Linki i ciekawe znaleziska:
