--- a/_posts/2023-03-24-67.md
+++ b/_posts/2023-03-24-67.md
@@ -7,6 +7,7 @@ episode: "67"
 tags: []
 spreaker: 53311093
 ---
+Dziś o dramie Dockera, MSie w FinOps, Infrastructure as SQL i wiele więcej! Posłuchajcie, co tym razem ciekawego znaleźli Patoarchitekci!
 
 
 Linki i ciekawe znaleziska:
