--- a/_posts/2023-03-31-68.md
+++ b/_posts/2023-03-31-68.md
@@ -8,12 +8,10 @@ tags: []
 spreaker: 5339114
 ---
 Jak zacząć zarządzać architekturą? 
-ChatGPT - pluginy i generowanie scen 3D - oraz do czego wykorzystują go developerzy 
-Github Actions i bezpieczeństwo 
- 
+ChatGPT - pluginy i generowanie scen 3D - oraz do czego wykorzystują go developerzy,
+Github Actions i bezpieczeństwo...
 
- 
-Sprawdź odcinek i dowiedz się więcej 
+Sprawdź odcinek i dowiedz się więcej!
 
 
 Linki i ciekawe znaleziska:
