--- a/_posts/2023-04-07-69.md
+++ b/_posts/2023-04-07-69.md
@@ -13,25 +13,25 @@ Tym razem nasz gość specjalny, Oskar Dudycz, przybliży nam temat event sourci
 Linki i ciekawe znaleziska:
 
 - [Beginner's Guide to Event Sourcing  ](https://www.eventstore.com/event-sourcing)
-- [Event-driven startup - Alexey&#39;s place](https://zimarev.com/blog/event-sourcing/startup-story-1/)
-- [](https://event-driven.io/en/optimistic_concurrency_for_pessimistic_times/)
+- [Event-driven startup - Alexey Zimarev](https://zimarev.com/blog/event-sourcing/startup-story-1/)
+- [Optimistic concurrency for pessimistic times](https://event-driven.io/en/optimistic_concurrency_for_pessimistic_times/)
 - [[KAFKA-2260] Allow specifying expected offset on produce - ASF JIRA](https://issues.apache.org/jira/browse/KAFKA-2260)
 - [Marten  ](https://martendb.io/)
 - [EventStoreDB - the state-transition database for data-driven businesses](https://www.eventstore.com/)
-- [](https://event-driven.io/en/lets_build_event_store_in_one_hour/)
-- [](https://event-driven.io/en/)
-- [](https://www.architecture-weekly.com/)
+- [Let's build event store in one hour!](https://event-driven.io/en/lets_build_event_store_in_one_hour/)
+- [Blog Oskara](https://event-driven.io/en/)
+- [Newsletter Oskara - Architecture Weekly](https://www.architecture-weekly.com/)
 - [Event Store Blog](https://www.eventstore.com/blog)
 - [Beginner's Guide to Event Sourcing  ](https://www.eventstore.com/event-sourcing)
-- [](https://event-driven.io/en/never_lose_data_with_event_sourcing/)
-- [](https://event-driven.io/en/when_not_to_use_event_sourcing/)
-- [](https://event-driven.io/en/event_streaming_is_not_event_sourcing)
-- [](https://www.youtube.com/watch?v=Lu-skMQ-vAw)
-- [](https://leanpub.com/esversioning)
-- [](https://event-driven.io/en/simple_events_versioning_patterns/)
-- [](https://event-driven.io/en/event_versioning_with_marten/)
+- [Never Lose Data Again - Event Sourcing to the Rescue!](https://event-driven.io/en/never_lose_data_with_event_sourcing/)
+- [When not to use Event Sourcing?](https://event-driven.io/en/when_not_to_use_event_sourcing/)
+- [Event Streaming is not Event Sourcing!](https://event-driven.io/en/event_streaming_is_not_event_sourcing)
+- [Let's build the worst Event Sourcing system! - Oskar Dudycz - EventSourcing Live 2021](https://www.youtube.com/watch?v=Lu-skMQ-vAw)
+- [Versioning in an Event Sourced System](https://leanpub.com/esversioning)
+- [Simple patterns for events schema versioning](https://event-driven.io/en/simple_events_versioning_patterns/)
+- [Event Versioning with Marten](https://event-driven.io/en/event_versioning_with_marten/)
 - [Keep your streams short! Temporal modeling for fast reads and optimal data retention](https://www.eventstore.com/blog/keep-your-streams-short-temporal-modelling-for-fast-reads-and-optimal-data-retention)
-- [](https://www.youtube.com/watch?v=gG6DGmYKk4I)
+- [How to model event-sourced systems efficiently - Oskar Dudycz - DDD Europe 2022](https://www.youtube.com/watch?v=gG6DGmYKk4I)
 - [GitHub - oskardudycz/EventSourcing.NetCore: Examples and Tutorials of Event Sourcing in .NET](https://github.com/oskardudycz/EventSourcing.NetCore)
 
 ### Transkrypcja
