--- a/_posts/2023-03-31-68.md
+++ b/_posts/2023-03-31-68.md
@@ -16,12 +16,14 @@ Sprawdź odcinek i dowiedz się więcej!
 
 Linki i ciekawe znaleziska:
 
+- [Live - Zdobądź wymarzoną pracę
+przy pomocy Terraform!](https://architekturaikontenery.pl/poznajterraform-live/)
 - [A Simple Framework for Architectural Decisions](https://www.infoq.com/articles/framework-architectural-decisions)
 - [Zalando Tech Radar](https://opensource.zalando.com/tech-radar/)
 - [RFC 7990: RFC Format Framework](https://www.rfc-editor.org/rfc/rfc7990.html)
 - [#13 ADR, czyli Architecture Decision Record - Patoarchitekci](https://patoarchitekci.io/13/)
-- [](https://www.thoughtworks.com/radar/techniques/lightweight-architecture-decision-records)
-- [](https://adr.github.io/)
+- [Lightweight Architecture Decision Records](https://www.thoughtworks.com/radar/techniques/lightweight-architecture-decision-records)
+- [Architectural Decision Records (ADRs)](https://adr.github.io/)
 - [GitHub - joelparkerhenderson/architecture-decision-record: Architecture decision record nullADR) examples for software planning, IT leadership, and template documentation](https://github.com/joelparkerhenderson/architecture-decision-record)
 - [Choosing Sequential Testing Framework — Comparisons and Discussions - Spotify Engineering : Spotify Engineering](https://engineering.atspotify.com/2023/03/choosing-sequential-testing-framework-comparisons-and-discussions/)
 - [Passwordless deployments to the cloud  ](https://github.blog/2023-01-11-passwordless-deployments-to-the-cloud/)
