--- a/_posts/2023-03-24-67.md
+++ b/_posts/2023-03-24-67.md
@@ -12,6 +12,8 @@ Dziś o dramie Dockera, MSie w FinOps, Infrastructure as SQL i wiele więcej! Po
 
 Linki i ciekawe znaleziska:
 
+- [Live - Zdobądź wymarzoną pracę
+przy pomocy Terraform!](https://architekturaikontenery.pl/poznajterraform-live/)
 - [IaSQL - Infrastructure as data in PostgreSQL](https://iasql.com/)
 - [Docker is deleting Open Source organisations - what you need to know](https://blog.alexellis.io/docker-is-deleting-open-source-images/)
 - [What to know about the end of Docker Free Teams  ](https://www.docker.com/blog/we-apologize-we-did-a-terrible-job-announcing-the-end-of-docker-free-teams/)
