--- a/_posts/2023-04-14-70.md
+++ b/_posts/2023-04-14-70.md
@@ -12,6 +12,7 @@ spreaker: 53528029
 Linki i ciekawe znaleziska:
 
 - [Fallacies of distributed computing - Wikipedia](https://en.wikipedia.org/wiki/Fallacies_of_distributed_computing)
+- [Dołącz do Poznaj Terraform w przedsprzedaży](https://architekturaikontenery.pl/poznajterraform/?utm_source=patoarchitekci&utm_medium=ep70&utm_campaign=ptf_pre)
 
 ### Transkrypcja
 
