--- a/_posts/2023-04-07-69.md
+++ b/_posts/2023-04-07-69.md
@@ -12,8 +12,7 @@ Tym razem nasz gość specjalny, Oskar Dudycz, przybliży nam temat event sourci
 
 Linki i ciekawe znaleziska:
 
-- [Live - Zdobądź wymarzoną pracę
-przy pomocy Terraform!](https://architekturaikontenery.pl/poznajterraform-live/)
+- [Dołącz do Poznaj Terraform w przedsprzedaży](https://architekturaikontenery.pl/poznajterraform/?utm_source=patoarchitekci&utm_medium=ep69&utm_campaign=ptf_pre)
 - [Beginner's Guide to Event Sourcing  ](https://www.eventstore.com/event-sourcing)
 - [Event-driven startup - Alexey Zimarev](https://zimarev.com/blog/event-sourcing/startup-story-1/)
 - [Optimistic concurrency for pessimistic times](https://event-driven.io/en/optimistic_concurrency_for_pessimistic_times/)
