--- a/_posts/2023-04-14-70.md
+++ b/_posts/2023-04-14-70.md
@@ -7,6 +7,7 @@ episode: "70"
 tags: []
 spreaker: 53528029
 ---
+Tym razem o aktualności fallacies of distributed computing, czyli systemy rozproszone Czy ww. tezy są wciąż aktualne? Sprawdźcie, jak weryfikują je Patoarchitekci!
 
 
 Linki i ciekawe znaleziska:
