--- a/_posts/2023-04-14-70.md
+++ b/_posts/2023-04-14-70.md
@@ -6,7 +6,7 @@ description:
 episode: "70"
 tags: []
 spreaker: 53528029
-apple: 1000608908597
+apple: fallacies-of-distributed-computing/id1477067604?i=1000608908597
 ---
 Tym razem o aktualności fallacies of distributed computing, czyli systemy rozproszone Czy ww. tezy są wciąż aktualne? Sprawdźcie, jak weryfikują je Patoarchitekci!
 
