--- a/_posts/2023-03-31-68.md
+++ b/_posts/2023-03-31-68.md
@@ -6,6 +6,7 @@ description:
 episode: "68"
 tags: []
 spreaker: 53391145
+apple: patoarchitekci-short-24/id1477067604?i=1000606703295
 ---
 Jak zacząć zarządzać architekturą? 
 ChatGPT - pluginy i generowanie scen 3D - oraz do czego wykorzystują go developerzy,
