--- a/_posts/2023-03-17-66.md
+++ b/_posts/2023-03-17-66.md
@@ -6,6 +6,7 @@ description:
 episode: "66"
 tags: []
 spreaker: 53222762
+apple: patoarchitekci-short-22/id1477067604?i=1000604610122
 ---
 Mamy dla Was nowe znaleziska! 
 Discord, Cassandra, Scylla, Spotify i nie tylko!
