--- a/_posts/2023-03-24-67.md
+++ b/_posts/2023-03-24-67.md
@@ -6,6 +6,7 @@ description:
 episode: "67"
 tags: []
 spreaker: 53311093
+apple: patoarchitekci-short-23/id1477067604?i=1000605678136
 ---
 Dziś o dramie Dockera, MSie w FinOps, Infrastructure as SQL i wiele więcej! Posłuchajcie, co tym razem ciekawego znaleźli Patoarchitekci!
 
