--- a/_posts/2023-03-10-65.md
+++ b/_posts/2023-03-10-65.md
@@ -6,6 +6,7 @@ description:
 episode: "65"
 tags: ["mrsk","autoskalowanie","serviceweaver"]
 spreaker: 53147028
+apple: patoarchitekci-short-21/id1477067604?i=1000603555326
 ---
 Jak zwykle dzieje się dużo:
 Maersk, hey.com a AWS i onprem,
@@ -29,13 +30,13 @@ Linki i ciekawe znaleziska:
 
 **Szymon Warda**: Cześć Słuchacie Patoarchitektów Prowadzą Szymon Warda...
 
-**Łukasz Kałużny**: ...i Łukasz Kałużny. Wszystkie linki do tego odcinka znajdziecie na Patoarchitekci/io/65 albo gdzieś na dole w Twoim playerze do kliknięcia.
+**Łukasz Kałużny**: ...i Łukasz Kałużny. Wszystkie linki do tego odcinka znajdziecie na patoarchitekci.io/65 albo gdzieś na dole w Twoim playerze do kliknięcia.
 
 **Szymon Warda**: Dobrze Łukaszu, linki. Co tam masz ciekawego?
 
 **Łukasz Kałużny**: Dobra, zaczynając może od Maerska - takiej nowej technologii...
 
-**Szymon Warda**: Doprecyzujmy. To nie jest Maerzk, ci od kontenerów.
+**Szymon Warda**: Doprecyzujmy. To nie jest Maersk, ci od kontenerów.
 
 **Łukasz Kałużny**: Tak, ale ten Maersk też zajmuje się kontenerami.
 
