--- a/_posts/2023-03-03-64.md
+++ b/_posts/2023-03-03-64.md
@@ -6,6 +6,7 @@ description:
 episode: "64"
 tags: ["devops","platform","engineer","engineering","serverless","google","ocr","infra"]
 spreaker: 53071283
+apple: patoarchitekci-short-20/id1477067604?i=1000602592412
 ---
 Dziś Patoarchitekci o DevOpsie (i DevOpsach...), platform engineeringu, Internal Development Platform...
 a także: cloud isn't dead, oraz o nowej technologii od Google! :D
