--- a/_posts/2023-02-24-63.md
+++ b/_posts/2023-02-24-63.md
@@ -6,6 +6,7 @@ description:
 episode: "63"
 tags: ["cloud","cncf","ankieta","servicemesh","cassandra","kafka"]
 spreaker: 52824469
+apple: patoarchitekci-short-19/id1477067604?i=1000601388338
 ---
 Co słychać w CNCFie? Jakie projekty zyskały na popularności? Czy będzie ucieczka z cloudu? 
 Dziś o ankiecie od Datadoga i Dynatrace'a... i co możemy z niej wywnioskować! 
