--- a/_posts/2023-02-17-62.md
+++ b/_posts/2023-02-17-62.md
@@ -3,9 +3,10 @@ layout: post
 title: '#62 Architektura single i multi tenant'
 date: 2023-02-17 08:00:00 +0200
 description: 
-img: "62"
+episode: "62"
 tags: []
 spreaker: 52754192
+apple: architektura-single-i-multi-tenant/id1477067604?i=1000600109555
 ---
 Multi-tenancy vs single-tenancy! Czyli m. in. implementacja pod B2C a B2B, sposoby implementacji, co w kodzie... a co w infrastrukturze? 
 
