--- a/_posts/2023-04-21-71.md
+++ b/_posts/2023-04-21-71.md
@@ -8,6 +8,7 @@ tags: []
 spreaker: 53594024
 apple: 
 ---
+Tym razem o Postgresie, rynku IT, a także kilka ciekawostek!
 
 
 Linki i ciekawe znaleziska:
