--- a/_posts/2023-04-21-71.md
+++ b/_posts/2023-04-21-71.md
@@ -18,7 +18,7 @@ Linki i ciekawe znaleziska:
 - [Is there a drop in software engineer job openings, globally? - The Pragmatic Engineer](https://blog.pragmaticengineer.com/is-there-a-drop-in-software-engineer-job-openings-globally/)
 - [Technology Lifecycle - Slack Engineering](https://slack.engineering/technology-lifecycle/)
 - [Postgres Superpowers in Practice](https://event-driven.io/en/postgres_superpowers/)
-- [Klaster K8s na Raspberry Pi, czyli K3s na nowo &middot; Łukasz Kałużny](https://kaluzny.io/klaster-k8s-na-raspberry-pi-czyli-k3s-na-nowo/)
+- [Klaster K8s na Raspberry Pi, czyli K3s na nowo](https://kaluzny.io/klaster-k8s-na-raspberry-pi-czyli-k3s-na-nowo/)
 - [Software Architecture and Design InfoQ Trends Report - April 2023](https://www.infoq.com/articles/architecture-trends-2023/)
 - [Twój hosting nie produkuje stu kilogramów CO2](https://informatykzakladowy.pl/twoj-hosting-nie-produkuje-stu-kilogramow-co2/)
 
