--- a/_posts/2023-04-21-71.md
+++ b/_posts/2023-04-21-71.md
@@ -6,7 +6,7 @@ description:
 episode: "71"
 tags: []
 spreaker: 53594024
-apple: 
+apple: patoarchitekci-short-25/id1477067604?i=1000610053816
 ---
 Tym razem o Postgresie, rynku IT, a także kilka ciekawostek!
 
