--- a/_posts/2023-04-28-72.md
+++ b/_posts/2023-04-28-72.md
@@ -8,6 +8,7 @@ tags: []
 spreaker: 53674062
 apple: 
 ---
+Co słychać w Kubernetesie? Jak w przełożeniu na rzeczywistość branża HR opisuje stanowiska developerów? O tym, jak i wiele więcej, dowiecie się w najnowszym Patoarchitekci Short! :D
 
 
 Linki i ciekawe znaleziska:
