--- a/_posts/2023-04-28-72.md
+++ b/_posts/2023-04-28-72.md
@@ -6,7 +6,7 @@ description:
 episode: "72"
 tags: []
 spreaker: 53674062
-apple: 
+apple: patoarchitekci-short-26/id1477067604?i=1000610979490
 ---
 Co słychać w Kubernetesie? Jak w przełożeniu na rzeczywistość branża HR opisuje stanowiska developerów? O tym, jak i wiele więcej, dowiecie się w najnowszym Patoarchitekci Short! :D
 
